--- a/README
+++ b/README
@@ -1,1 +1,7 @@
-Run JAR to play
+#Lasciate ogne speranza, voi ch'intrate
+
+This was a weekend project to get a sense of the "default" Java UI frameworks of a bygone era.
+
+I attempted to comment the code after the fact, but it is too much effort and I consider it lost to memory.
+
+Run JAR to play, nothing is guaranteed.
